reserve_1028_1348 combined reserve